# firebase-functions-future-async-nested

./: LICENSE  README.md
app/: .gitignore  CMakeLists.txt  main.cpp
app/libs/: get-firebase-cpp-sdk.sh
firebase/: .firebaserc
firebase/functions/: index.js
